✨ (backend/docs/DOCS.ipynb): expand documentation with detailed insights on testing practices, Docker deployment challenges, and project conclusions, enhancing overall understanding of the development process and technology integration.

--- a/backend/docs/DOCS.ipynb
+++ b/backend/docs/DOCS.ipynb
@@ -536,21 +536,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Testing"
+    "# Testing\n",
+    "This phase of the project was admittedly not very hard, but it's actually one of parts I enjoyed the most. Truly, I haven't done any large-scale testing in my apps before since it was not needed, so having the time to practice it was both a good learning experience and also a fun task to do.\n",
+    "\n",
+    "From research, I found that using [pytest](https://docs.pytest.org/en/stable/) was one of the industry standards. \n",
+    "\n",
+    "Some suggest that it would be good to make tests before doing the features, to have \"test-driven development\". For me, I believe that a mix of both is good. Since the tests are being created now, maintaining the project and adding more features in the future will be much easier.\n",
+    "\n",
+    "Funnily enough, I was actually able to identify a bug in the Backend API after implementing testing, wherein I found that the `/session` endpoint was not implementing proper input validation, and not outputting the correct HTTP error code. \n",
+    "\n",
+    "Below are some examples of the tests I had done \n",
+    "\n",
+    "```python\n",
+    "def test_unknown_method():\n",
+    "    response = client.put(\"/health\")\n",
+    "    assert response.status_code == 405\n",
+    "```\n",
+    "This test was actually good, since although FastAPI already handled the boilerplate for me, it gave me a wider view of the project\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "\n",
+    "@pytest.mark.selenium\n",
+    "def test_continue_with_long_username(driver):\n",
+    "    \"\"\"Test that submitting the form with a long username shows the correct error message.\"\"\"\n",
+    "    test_username = \"testuser123\" * 10\n",
+    "    expected_message = \"Username is too long\"\n",
+    "\n",
+    "    time.sleep(1)  # Wait for page to load\n",
+    "\n",
+    "    # Find and fill the username input\n",
+    "    username_input = driver.find_element(\"id\", \"username-input\")\n",
+    "    username_input.send_keys(test_username)\n",
+    "\n",
+    "    # Click the continue button\n",
+    "    button = driver.find_element(\"id\", \"continue-button\")\n",
+    "    button.click()\n",
+    "\n",
+    "    # Wait for the form message to appear (max 5 seconds)\n",
+    "    message_element = WebDriverWait(driver, 5).until(\n",
+    "        EC.presence_of_element_located((By.CSS_SELECTOR, '[data-slot=\"form-message\"]'))\n",
+    "    )\n",
+    "\n",
+    "    # Assert the message matches the expected text\n",
+    "    assert message_element.text == expected_message, (\n",
+    "        f\"Expected message '{expected_message}' but got '{message_element.text}'\"\n",
+    "    )\n",
+    "```\n",
+    "\n",
+    "It was also fund doing an E2E test with the React frontend and ensuring all the form validation is correct by using [Selenium](https://www.selenium.dev/), the foremost web browser driver in Pythonland."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deployment"
+    "# Docker Deployment\n",
+    "\n",
+    "Since I had already planned for deploying via Docker from the start, deploying each service became an easy task afterward. Thus, I only needed to double check all the config and connections if they were correct, since each service was already containerized and decoupled from one another.\n",
+    "\n",
+    "\n",
+    "### .env handling in Frontent\n",
+    "Unfortunately, I had some problems doing in the .env management in the Frontend since Vite does it differently from what I was accustomed to. They had their own `import.meta.env` syntax for declaring and accessing the environment secrets, and these were statically replaced at build time - a feature I did not understand truthfully. I found that the environment variables were being undefined at different areas (client and server) and erratically depending on the method (`process.env` or `import.meta.env`). There was also the `VITE_` prefix that was necessary in order for it to be readable on the client.\n",
+    "\n",
+    "- .env handling in Vite: https://vite.dev/guide/env-and-mode\n",
+    "- the Stackoverflow post that made me find out it was Docker build: https://stackoverflow.com/questions/77486735/docker-with-vite-env-variables-are-undefined-inside-the-docker-container\n",
+    "\n",
+    "Eventually, I found out that a weird quirk in the build process meant that the .env was not available to the builder in Docker. I only had to set it up as a build argument in the Dockerfile and it finally worked in the docker container."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Documentation"
+    "# Conclusions\n",
+    "\n",
+    "# Conclusions\n",
+    "\n",
+    "Working on this project was a great learning experience for me. I got to use a mix of technologies—like Docker, Postgres, Langchain, Ollama, and React—and learned how they can all work together to build a seamless containerized full-stack app. Setting up things like Docker networks and managing dependencies with new tools like `uv` helped me understand more about modern development workflows.\n",
+    "\n",
+    "I also had a lot of fun exploring new libraries and frameworks, and I enjoyed the challenge of connecting everything smoothly. Building both the backend and frontend gave me a better idea of how to design apps that are both powerful and easy to use.\n",
+    "\n",
+    "Overall, this project expanded my vision and skillset. I feel more confident now in using these tools for future projects, and I’m excited to keep learning and building even more complex applications."
    ]
   }
  ],
