✨ (README.md, backend/docs/DOCS.ipynb): update documentation to include Docker cleanup instructions, model download automation, and additional setup details for improved clarity and user experience.

--- a/backend/docs/DOCS.ipynb
+++ b/backend/docs/DOCS.ipynb
@@ -64,7 +64,9 @@
     "\n",
     "Since I already had Ollama running on my computer, I made sure to save the `.ollama` data in a separate volume and used a different port for this project. This way, it wouldn’t interfere with my other work.\n",
     "\n",
-    "Additionally, I added the `OLLAMA_KEEP_ALIVE=24h` key in the compose setup in order to prevent model unloading when they are stale or have not been used recently. I found that this was good when testing different models and at different times - fortunately my GPU had enough VRAM to store all models that were tested at the same time"
+    "Additionally, I added the `OLLAMA_KEEP_ALIVE=24h` key in the compose setup in order to prevent model unloading when they are stale or have not been used recently. I found that this was good when testing different models and at different times - fortunately my GPU had enough VRAM to store all models that were tested at the same time\n",
+    "\n",
+    "Furthermore, I configured the `ollama/entrypoint.sh` script so that it downloads all of the models at startup, so that the setup is hands-free"
    ]
   },
   {
