📝 Update documentation and frontend model selection to remove `qwen2.5-coder:1.5b` and replace it with `gemma3:1b` for better resource management.

--- a/backend/docs/DOCS.ipynb
+++ b/backend/docs/DOCS.ipynb
@@ -56,6 +56,8 @@
     "\n",
     "Later, I added the option to load more than one model in the app, so I could compare them easily via the UI. I included `llama3.2:1b` and `qwen2.5-coder:1.5b` because they are similar in size and performance.\n",
     "\n",
+    "Later on, I decided to remove `qwen2.5-coder:1.5b` from the models to reduce the overall image size, since having 2 models already prove the model switching feature in the application. \n",
+    "\n",
     "# LLM Provider: Ollama\n",
     "\n",
     "For running the models, I chose Ollama right away. I already use Ollama for my own projects, so I know how it works and how to set it up. It’s also popular in the developer community, so there are lots of guides and help available on places like Stack Overflow and GitHub. Ollama works on many operating systems and is easy to run with Docker.\n",
