✨ Update model references from llama3.2 to qwen3 across documentation and tests for improved performance comparison.

--- a/backend/docs/DOCS.ipynb
+++ b/backend/docs/DOCS.ipynb
@@ -54,9 +54,7 @@
     "\n",
     "You can read more about Gemma 3 in this [blog post](https://blog.google/technology/developers/gemma-3/).\n",
     "\n",
-    "Later, I added the option to load more than one model in the app, so I could compare them easily via the UI. I included `llama3.2:1b` and `qwen2.5-coder:1.5b` because they are similar in size and performance.\n",
-    "\n",
-    "Later on, I decided to remove `qwen2.5-coder:1.5b` from the models to reduce the overall image size, since having 2 models already prove the model switching feature in the application. \n",
+    "I also decided to add another model to compare `gemma3` with, `qwen3`, I chose it as one of the smallest new reasoning models, to see how it compares with gemma3. Since I like using other models like `qwen2.5-coder` from qwen, I found it interesting to compare the 2, especially the lower parameter count in qwen3 and would the reasoning capability compensate for that. Additionally, this provided a way for me to add model switching in the app so that comparing models can be easy.\n",
     "\n",
     "# LLM Provider: Ollama\n",
     "\n",
