🔧 (DOCS.ipynb): enhance documentation with detailed insights on Docker networking issues and refactor strategies for improved frontend-backend communication across different environments.

--- a/backend/docs/DOCS.ipynb
+++ b/backend/docs/DOCS.ipynb
@@ -604,7 +604,15 @@
     "- .env handling in Vite: https://vite.dev/guide/env-and-mode\n",
     "- the Stackoverflow post that made me find out it was Docker build: https://stackoverflow.com/questions/77486735/docker-with-vite-env-variables-are-undefined-inside-the-docker-container\n",
     "\n",
-    "Eventually, I found out that a weird quirk in the build process meant that the .env was not available to the builder in Docker. I only had to set it up as a build argument in the Dockerfile and it finally worked in the docker container."
+    "Eventually, I found out that a weird quirk in the build process meant that the .env was not available to the builder in Docker. I only had to set it up as a build argument in the Dockerfile and it finally worked in the docker container.\n",
+    "\n",
+    "\n",
+    "### Container-to-container and Host-Container Networking in Docker\n",
+    "After deploying, I found that there were issues when running the entire stack in different environments and OS. I found that a weird quirk in the client-side (browser) code on the React app which was connecting to the Backend (through the Docker network) was failing because, depending on how the OS and Docker handles DNS, the IP address for the backend service was not accessible (because I also set static IPs in the `docker-compose.yml` file)\n",
+    "\n",
+    "After rigorous testing across different devices, I refactored my Frontend app to have logic within the server-side environment to not have the browser/client side interface directly with the Backend/Database/Ollama. Furthermore, I simplified the port and IP assignment in the compose file by setting correct dependencies, and letting docker handle the IP assignment and networking e.g. `http://bd_backend:8000` instead of explicitly assigning `http://172.28.0.20:8000` (which, on hindsight, would really NOT be accessible on client side)\n",
+    "\n",
+    "Furthermore, I found that exposing the services on the same ports on the containers as well as on host would reduce confusions on testing and development. For example, the backend was running on port `8002` on my host machine, which was forwarded to port `8000` of the container - it became a headache to put all of these assignments in your mental map. So I just simplified it"
    ]
   },
   {
